<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker</name>
  <version>0.0.0</version>
  <description>roomba like walker</description>
  <maintainer email="112571645+shivamsehgal77@users.noreply.github.com">shivam</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp_action</build_depend>

  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <!-- Turtlebot4 -->
  <depend>turtlebot4_description</depend>
  <depend>turtlebot4_msgs</depend>
  <depend>turtlebot4_navigation</depend>
  <depend>turtlebot4_node</depend>
  <depend>turtlebot4_viz</depend>
  <depend>turtlebot4_ignition_gui_plugins</depend>
  <depend>turtlebot4_ignition_toolbox</depend>

  <!-- Messages -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
